# router/app.go
@@ -20,6 +20,7 @@ func Router() *gin.Engine {
 	// 用户
 	r.GET("/user-detail", service.GetUserDetail)
 	r.POST("/login", service.Login)
+	r.POST("/send-code", service.SendCode)
 
 	// 提交
 	r.GET("/submit-list", service.GetSubmitList)
