# service/user.go
@@ -64,7 +64,7 @@ func Login(c *gin.Context) {
 	data := new(models.UserBasic)
 	err := models.DB.Where("name = ? AND password = ? ", username, password).First(data).Error
 	if err != nil {
-		if err == gorm.ErrRecordNotFound() {
+		if err == gorm.ErrRecordNotFound {
 			c.JSON(http.StatusOK, gin.H{
 				"code": -1,
 				"data": "用户名或密码错误",
@@ -91,5 +91,35 @@ func Login(c *gin.Context) {
 		"data": map[string]interface{}{
 			"token": token,
 		},
+	})
+}
+
+// SendCode
+// @Tags 公共方法
+// @Summary 发送验证码
+// @param email formData string false "email"
+// @Success 200 {string} json "{"code":200,"data":""}"
+// @Router /send-code [post]
+func SendCode(c *gin.Context) {
+	email := c.PostForm("email")
+	if email == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"data": "email is empty",
+		})
+		return
+	}
+	code := "123456"
+	err := helper.SendCode(email, code)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"data": err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": "验证码发送成功",
 	})
 }
